Created navigation drawer to make integration easier

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Booking">
+        <activity android:name=".Booking"
+                  android:windowSoftInputMode="stateAlwaysHidden">
+
             <intent-filter>
                 <action android:name="android.intent.action.Booking" />
 
